# txodds-world-cup-submission

./: .gitignore  README.md  TECHNICAL_DOCUMENTATION.md
products/finalitygate-resolver/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION.md  netlify.toml  pyproject.toml
products/finalitygate-resolver/examples/: evidence_conflict.json  evidence_ok.json  market.json
products/finalitygate-resolver/scripts/: count_tests.py  local_gate.py  release_assets.py  run_local_gate.ps1
products/finalitygate-resolver/src/finalitygate/: __init__.py  cli.py  commitment.py  core.py  demo.py  explain.py  impact.py  ledger.py  onchain.py  txline.py  validation.py
products/finalitygate-resolver/src/finalitygate/web/: __main__.py  app.py  smoke.py
products/finalitygate-resolver/tests/: test_audit.py  test_cli_new.py  test_commitment.py  test_core.py  test_explain_onchain.py  test_impact.py  test_ledger.py  test_robustness.py  test_txline.py  test_validation.py  test_web.py
products/finalitygate-resolver/tests/fixtures/: valid_score_validation.json
products/proofguard-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION.md  pyproject.toml  render.yaml
products/proofguard-agent/scripts/: local_gate.py  release_assets.py  run_local_gate.sh
products/proofguard-agent/src/proofguard_agent/: __init__.py  adapter.py  cli.py  core.py  demo.py  model.py  scenarios.py  txline.py  validation.py
products/proofguard-agent/src/proofguard_agent/web/: __init__.py  app.py  runtime.py  smoke.py
products/proofguard-agent/tests/: test_audit.py  test_cli_new.py  test_core.py  test_local_gate_evidence.py  test_model.py  test_robustness.py  test_txline_adapter.py  test_validation.py  test_web_lifespan.py  test_web_runtime.py
products/proofguard-agent/tests/fixtures/: valid_odds_validation.json
products/txodds-portfolio-host/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  render.yaml
products/txodds-portfolio-host/src/txodds_portfolio_host/: __init__.py  __main__.py  app.py
products/txodds-portfolio-host/tests/: test_host.py
scripts/: export_submission_projects.ps1  export_submission_projects.py  finalize_submission_packets.ps1  finalize_submission_packets.py  run_hackathon_local.ps1  smoke_live.py
